# MyLearnings

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: codeql.yml
Hydraylics/: pilot_operated_check_values.py
documentation/: documentation.py  main.py  schemas.py
dokument/: documentation.py  main.py  schemas.py
subject/hydraulics/: pilot_operated_check_values.py
